--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/logo.png" type="image/x-icon"
     <title>Объединение Задротов - Minecraft Сервер</title>
     <style>
         body {
@@ -121,3 +122,4 @@
     </footer>
 </body>
 </html>
+
