--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             padding: 20px;
             border: 5px solid #3c2f2f;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            border-radius: 10px 10px 10px 10px;
         }
 
         .container h2 {
@@ -122,5 +123,6 @@
     </footer>
 </body>
 </html>
+
 
 
