--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="yandex-verification" content="375188f489e5595f" />
     <!-- <link rel="icon" href="img/logo.png" type="image/x-icon" -->
     <title>Объединение Задротов - Minecraft Сервер</title>
     <style>
@@ -123,6 +124,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
