--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="yandex-verification" content="375188f489e5595f" />
+    <meta name="google-site-verification" content="w7GQogxVcBMlui4Tl3EEOcW0wbDUBAmAYO-KJ6Nmsvo" />
     <!-- <link rel="icon" href="img/logo.png" type="image/x-icon" -->
     <title>Объединение Задротов - Minecraft Сервер</title>
     <style>
@@ -124,6 +125,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
