--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Объединение Задротов - ванильный сервера Minecraft. Дружное комьюнити, актуальная версия Minecraft. Заходи прямо сейчас">
     <meta name="yandex-verification" content="375188f489e5595f" />
     <meta name="google-site-verification" content="w7GQogxVcBMlui4Tl3EEOcW0wbDUBAmAYO-KJ6Nmsvo" />
     <!-- <link rel="icon" href="img/logo.png" type="image/x-icon" -->
@@ -125,6 +126,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
