--- a/index.html
+++ b/index.html
@@ -119,13 +119,14 @@
 
     <div class="container" id="secondseason">
       <h2>2 Сезон</h2>
-      <p>Первый сезон давно позади и ОЗ готовится к новому сезону. Примерное время открытия 2 сезона 4 сентября - 24 сентября.</p>
+      <p>Второй сезон уже начался,а значит вместе с ним появилось много новых возможностей и будущих историй, присоединяйся к ОЗ и успей на открытие энда!</p>
     </div>
     <footer>
         <p>&copy; 2025 Объединение Задротов. Все права защищены.</p>
     </footer>
 </body>
 </html>
+
 
 
 
